--- a/index.html
+++ b/index.html
@@ -138,6 +138,177 @@
           </div>
         </div>
       </div>
+
+      <!-- Featured -->
+      <div class="featured">
+        <div class="content">
+          <header>
+            <h2 class="sub-title">Featured Properties</h2>
+            <div class="row">
+              <p class="desc">Everything you need to know when you're looking</p>
+              <a href="#!" class="link">
+                <span>View All Properties</span>
+                <img src="./assets/img/arrow-right.svg" alt="Arrow right" class="arrow">
+              </a>
+            </div>
+          </header>
+          <div class="list">
+            <div class="item">
+              <a href="#!">
+                <img src="./assets/img/featured-1.jpg" alt="Nikko Apartments" class="thumb">
+              </a>
+              <div class="body">
+                <div class="title">
+                  <a href="#!">Nikko Apartments</a>
+                </div>
+                <div class="desc">8502 Preston Rd. Inglewood, Maine 98280</div>
+                <div class="info">
+                  <img src="./assets/img/beds.svg" alt="" class="icon">
+                  <span class="label">5 Beds</span>
+
+                  <img src="./assets/img/both.svg" alt="" class="icon">
+                  <span class="label">2 both</span>
+
+                  <img src="./assets/img/sqft.svg" alt="" class="icon">
+                  <span class="label">2000 Sqft</span>
+                </div>
+              </div>
+            </div>
+
+            <div class="item">
+              <a href="#!">
+                <img src="./assets/img/featured-2.jpg" alt="CouCou Homestead" class="thumb">
+              </a>
+              <div class="body">
+                <div class="title">
+                  <a href="#!">CouCou Homestead</a>
+                </div>
+                <div class="desc">8502 Preston Rd. Inglewood, Maine 98280</div>
+                <div class="info">
+                  <img src="./assets/img/beds.svg" alt="" class="icon">
+                  <span class="label">5 Beds</span>
+
+                  <img src="./assets/img/both.svg" alt="" class="icon">
+                  <span class="label">2 both</span>
+
+                  <img src="./assets/img/sqft.svg" alt="" class="icon">
+                  <span class="label">2000 Sqft</span>
+                </div>
+              </div>
+            </div>
+
+            <div class="item">
+              <a href="#!">
+                <img src="./assets/img/featured-3.jpg" alt="Lavis 18 Residence" class="thumb">
+              </a>
+              <div class="body">
+                <div class="title">
+                  <a href="#!">Lavis 18 Residence</a>
+                </div>
+                <div class="desc">8502 Preston Rd. Inglewood, Maine 98280</div>
+                <div class="info">
+                  <img src="./assets/img/beds.svg" alt="" class="icon">
+                  <span class="label">5 Beds</span>
+
+                  <img src="./assets/img/both.svg" alt="" class="icon">
+                  <span class="label">2 both</span>
+
+                  <img src="./assets/img/sqft.svg" alt="" class="icon">
+                  <span class="label">2000 Sqft</span>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+
+      <!-- Stats -->
+      <div class="stats">
+        <div class="content">
+          <div class="row">
+            <div class="img-block">
+              <img src="./assets/img/stats-img.jpg" alt="You’ve found a neighborhood you love." class="image">
+              <div class="stats-trend">
+                <div class="row">
+                  <strong class="value">40,000+</strong>
+                  <img src="./assets/img/arrow-trend-up.svg" alt="" class="icon">
+                </div>
+                <p class="desc">By avarage for 2 bedroom apments in San Francisco, CA</p>
+                <div class="separate"></div>
+                <div class="avatar-block">
+                  <div class="avatar-group">
+                    <img src="./assets/img/avatar-1.jpg" alt="" class="avatar">
+                    <img src="./assets/img/avatar-1.jpg" alt="" class="avatar">
+                  </div>
+                  <div class="avatar-group">
+                    <img src="./assets/img/avatar-3.jpg" alt="" class="avatar">
+                    <img src="./assets/img/avatar-4.webp" alt="" class="avatar">
+                    <img src="./assets/img/avatar-5.jpg" alt="" class="avatar">
+                    <div class="avatar" style="--bg-color: #1F3BB1;">S</div>
+                  </div>
+                  <div class="avatar-group">
+                    <img src="./assets/img/avatar-5.jpg" alt="" class="avatar">
+                    <img src="./assets/img/avatar-6.jpg" alt="" class="avatar">
+                    <img src="./assets/img/avatar-7.jpeg" alt="" class="avatar">
+                  </div>
+                  <div class="avatar-group">
+                    <img src="./assets/img/avatar-3.jpg" alt="" class="avatar">
+                    <img src="./assets/img/avatar-4.webp" alt="" class="avatar">
+                    <img src="./assets/img/avatar-5.jpg" alt="" class="avatar">
+                    <img src="./assets/img/avatar-6.jpg" alt="" class="avatar">
+                  </div>
+                  <div class="avatar-group">
+                    <img src="./assets/img/avatar-1.jpg" alt="" class="avatar">
+                    <img src="./assets/img/avatar-2.jpg" alt="" class="avatar">
+                  </div>
+                  <div class="avatar-group">
+                    <img src="./assets/img/avatar-1.jpg" alt="" class="avatar">
+                    <img src="./assets/img/avatar-2.jpg" alt="" class="avatar">
+                  </div>
+                  <div class="avatar-group">
+                    <img src="./assets/img/avatar-1.jpg" alt="" class="avatar">
+                    <img src="./assets/img/avatar-2.jpg" alt="" class="avatar">
+                  </div>
+                </div>
+              </div>
+            </div>
+            <div class="info">
+              <h2 class="sub-title">You’ve found a neighborhood you love.</h2>
+              <p class="desc">When you own a home, you’re committing to living in one location for a while. In a recent Trulia survey, we found that five out of six respondents said finding the right neighborhood </p>
+            </div>
+          </div>
+
+          <div class="row row-qty">
+            <div class="qty-item">
+              <strong class="qty">2,500</strong>
+              <p class="qty-desc">Homes For Sale</p>
+            </div>
+            <div class="qty-item">
+              <strong class="qty">25,000+</strong>
+              <p class="qty-desc">Homes Recently Sold</p>
+            </div>
+            <div class="qty-item">
+              <strong class="qty">170+</strong>
+              <p class="qty-desc">Price Reduced</p>
+            </div>
+          </div>
+        </div>
+      </div>
+
+      <!-- Subscription -->
+      <div class="subscription">
+        <div class="content">
+          <div class="body">
+            <div class="info">
+              <h2 class="sub-title line-clamp">Subscribe to our Newsletter!</h2>
+              <p class="desc line-clamp" style="--line-clamp: 3">Subscribe to our newsletter and stay updated.</p>
+              <a href="#!" class="btn">Subscribe</a>
+            </div>
+            <img src="./assets/img/newletter.svg" alt="Subscribe to our Newsletter!" class="image">
+          </div>
+        </div>
+      </div>
+
     </main>
   </body>
 </html>
